--- a/yold-bukkit/plugins/War/war.yml
+++ b/yold-bukkit/plugins/War/war.yml
@@ -17,6 +17,7 @@ set:
       - sphere
       - adventure
       - stadium
+      - skycastle
       zonemakers:
       - tommytony
       commandwhitelist:
